# Ultracode

./: .env.example  .gitignore  README.md  README.zh-CN.md  TECHNICAL_REPORT.md  TECHNICAL_REPORT.zh-CN.md  pyproject.toml
aicode/background/: manager.py
aicode/cli/: output_fmt.py  repl.py  session.py  theme.py
aicode/core/: assistant_markdown_stream.py  client.py  config.py  loop.py  markdown_terminal.py  types.py
aicode/core/tools/: registry.py
aicode/mcp/: router.py
aicode/memory/: dream.py  manager.py
aicode/planning/: task_graph.py  todo.py
aicode/recovery/: __init__.py  middleware.py
aicode/security/: permission.py  trust.py  validator.py
aicode/subagent/: tools.py
aicode/worktrees/: tools.py
docs/: ARCHITECTURE.md  ROADMAP.md
src/aicode/: __init__.py  __main__.py
src/aicode/background/: __init__.py  middleware.py  queue.py
src/aicode/cli/: main.py  repl.py  session.py  theme.py
src/aicode/context/: compact.py  transcript.py
src/aicode/core/: assistant_markdown_stream.py  llm_types.py  loop.py  markdown_terminal.py  types.py  wait_hint.py
src/aicode/hooks/: events.py  manager.py
src/aicode/mcp/: __init__.py  bridge.py  client.py  loader.py
src/aicode/memory/: schema.py
src/aicode/planning/: todo.py  (+1 more)
tests/: conftest.py  test_cli_status.py  test_output_fmt.py
tests/phase1/: test_config_env.py  test_loop.py  test_task_graph.py  test_todo.py  test_tools.py  test_wait_hint.py
tests/phase2/: test_background_middleware.py  test_compact.py  test_hooks.py  test_mcp_router.py  test_memory.py  test_permission.py  test_prompt.py
(+14 files in other folders)
